--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="nav">
                 <ul>
-                    <li class="on"><a href="#">Home</a></li>
+                    <li class="on"><a href="#">Hom</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="webmobile.html">Web &amp; Mobile</a></li>
                     <li><a href="design.html">Design</a></li>
