--- a/webmobile.html
+++ b/webmobile.html
@@ -95,7 +95,7 @@
                             </div>
                             <div class="btn-wrap">
                                 <ul>
-                                    <li><a href="https://prada-redesign.netlify.app/" target="_blank">WEBSITE</a></li>
+                                    <li><a href="https://prada-re.netlify.app/" target="_blank">WEBSITE</a></li>
                                     <li><a href="#">PROCESS</a></li>
                                     <li><a href="https://www.prada.com/kr/ko.html" target="_blank">ORIGINAL</a></li>
                                 </ul>
@@ -152,7 +152,7 @@
                                 </div>
                                 <div class="btn-wrap">
                                     <ul>
-                                        <li><a href="https://daegumc-redesign.netlify.app/" target="_blank">WEBSITE</a></li>
+                                        <li><a href="https://daegumc-re.netlify.app/" target="_blank">WEBSITE</a></li>
                                         <li><a href="#">PROCESS</a></li>
                                         <li><a href="https://www.daegumc.co.kr/" target="_blank">ORIGINAL</a></li>
                                     </ul>
